# deerflow-agent-enforcer

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  deerflow.yaml  pyproject.toml
.ai/: AGENTS.md  SYSTEM_PROMPT.md  WINDSURF.md
.github/: copilot-instructions.md
.github/workflows/: deerflow-security-scan.yml
deerflow_core/engine/: __init__.py  context_manager.py  orchestrator.py  quality_gate.py  skill_registry.py
deerflow_core/skills/coding/: skill.yaml
deerflow_core/skills/security/: skill.yaml
deerflow_core/skills/testing/: skill.yaml
deerflow_core/workflow/definitions/: default.yaml
docs/: ARCHITECTURE.md  RULES.md  SKILLS.md  evidence-summary.json  final-verification-run.txt  generate_real_evidence.py  real-benchmark-data.json  real-cli-enforce.txt  real-cli-scan.txt  real-cli-validate.txt  real-test-collected.txt  real-test-output.txt  test-report.json
docs/evidence/data/: benchmark-comparison.json  coverage-real.json  test-report-real.json
docs/workflows/: deerflow-quality-gate.yml
hooks/: agent-guard.sh  pre-commit  pre-push
scripts/: setup.sh  validate.sh
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_context_manager.py  test_orchestrator.py  test_quality_gate.py  test_skill_registry.py
